Fix table spacing

--- a/public/css/clinic.styl
+++ b/public/css/clinic.styl
@@ -6,7 +6,8 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
-td
+
+td.generate, td.border
   padding: 8px
 
 table.border, td.border
@@ -17,9 +18,14 @@ table.border
   border-width: 0 0 1px 1px
   border-spacing: 0
   border-collapse: collapse
+
 td.border
   margin: 0
   border-width: 1px 1px 0 0
+
+table.view
+  text-align: left
+  border-spacing: 10px 0px;
 
 #left span.question
   font-size: 3em
